Release 5.1.0: Update to latest Spring Boot (4.0.5), EclipseStore (4.0.1)